--- a/package.json
+++ b/package.json
@@ -34,16 +34,7 @@
     "test:watch": "karma start --single-run=false --auto-watch",
     "test:debug": "karma start --browsers=Chrome --single-run=false --auto-watch --debug",
     "coveralls": "cat ./test/coverage/lcov.info | coveralls",
-    "pretest": "rimraf ./test/coverage",
-    "prepare": "is-ci || husky install .husky"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx,tsx,ts,less,md,json}": [
-      "pretty-quick —-staged"
-    ],
-    "*.ts": [
-      "eslint --fix"
-    ]
+    "pretest": "rimraf ./test/coverage"
   },
   "release": {
     "extends": "@bubkoo/semantic-release-config"
@@ -72,7 +63,6 @@
     "@types/pixelmatch": "^5.2.4",
     "coveralls": "^3.1.1",
     "eslint": "^8.22.0",
-    "husky": "^8.0.1",
     "is-ci": "^3.0.1",
     "jasmine-core": "^4.3.0",
     "karma": "^6.4.0",
