--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "html-to-image",
   "version": "1.11.11",
   "description": "Generates an image from a DOM node using HTML5 canvas and SVG.",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "unpkg": "dist/html-to-image.js",
-  "types": "es/index.d.ts",
+  "main": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "es",
-    "lib",
-    "src"
+    "dist"
   ],
   "keywords": [
     "screenshot",
@@ -23,13 +18,8 @@
     "svg"
   ],
   "scripts": {
-    "lint": "eslint 'src/**/*.{js,ts}?(x)' --fix",
-    "clean": "rimraf dist es lib",
-    "build:esm": "tsc --module esnext --target es2017 --outDir ./es",
-    "build:cjs": "tsc --module commonjs --target es5 --outDir ./lib",
-    "build:umd": "rollup -c --bundleConfigAsCjs",
-    "build": "run-s build:esm build:cjs build:umd",
-    "prebuild": "run-s lint clean",
+    "dev": "tsup src/index.ts --format esm --dts --sourcemap --watch",
+    "build": "tsup src/index.ts --format esm --dts --clean",
     "test": "karma start",
     "test:watch": "karma start --single-run=false --auto-watch",
     "test:debug": "karma start --browsers=Chrome --single-run=false --auto-watch --debug",
@@ -54,15 +44,12 @@
   "homepage": "https://github.com/bubkoo/html-to-image#readme",
   "devDependencies": {
     "@bubkoo/commitlint-config": "^1.0.2",
-    "@bubkoo/eslint-config": "^1.3.1",
-    "@bubkoo/rollup-config": "^1.2.1",
     "@bubkoo/semantic-release-config": "^1.6.1",
     "@bubkoo/tsconfig": "^1.0.0",
     "@fortawesome/fontawesome-free": "^6.1.2",
     "@types/jasmine": "^4.3.1",
     "@types/pixelmatch": "^5.2.4",
     "coveralls": "^3.1.1",
-    "eslint": "^8.22.0",
     "is-ci": "^3.0.1",
     "jasmine-core": "^4.3.0",
     "karma": "^6.4.0",
@@ -76,8 +63,8 @@
     "prettier": "^2.8.1",
     "pretty-quick": "^3.1.3",
     "rimraf": "^4.1.2",
-    "rollup": "^3.7.4",
     "tslib": "^2.4.0",
+    "tsup": "^7.2.0",
     "typescript": "^4.9.5"
   }
 }
