--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.11.11",
   "description": "Generates an image from a DOM node using HTML5 canvas and SVG.",
   "main": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/index.d.mts",
   "files": [
     "dist"
   ],
